<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".interfacesgraficas.corresponsal.consultarsaldo.ConsultarSaldoFragment">

    <include
        android:id="@+id/menu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        layout="@layout/menu_toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/documento"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDocumento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:paddingStart="30dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/pin"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPIN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:paddingStart="30dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/confirmar_pin"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmarPIN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:paddingStart="30dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:text="@string/saldo_disponible"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSaldoDisponible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text=""
            android:textAlignment="center"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/btnConsultarSaldo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="30dp"
            android:layout_weight="1"
            android:backgroundTint="#0100C1"
            android:text="@string/consultar_saldo" />

    </LinearLayout>

</LinearLayout>