<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".interfacesgraficas.corresponsal.transferir.TransferirFragment">

    <include
        android:id="@+id/menu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        layout="@layout/menu_toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/documento_cliente_que_transfiere"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDocumentoTransfiere"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:paddingStart="30dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/pin"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPIN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:paddingStart="30dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/confirmar_pin"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmarPIN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:paddingStart="30dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/documento_cliente_que_recibe"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDocumentoRecibe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:paddingStart="30dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/monto_a_transferir"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMonto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:paddingStart="30dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnTransferir"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="40dp"
            android:layout_weight="1"
            android:backgroundTint="#0100C1"
            android:text="@string/transferir" />

    </LinearLayout>

</LinearLayout>